@@ -1,5 +1,7 @@
 package com.bobeat.backend.domain.store.service;
 
+import static com.bobeat.backend.global.exception.ErrorCode.NOT_FOUND_RESTAURANT;
+
 import com.bobeat.backend.domain.store.dto.request.StoreFilteringRequest;
 import com.bobeat.backend.domain.store.dto.response.StoreDetailResponse;
 import com.bobeat.backend.domain.store.dto.response.StoreSearchResponse;
@@ -7,14 +9,13 @@ import com.bobeat.backend.domain.store.entity.Menu;
 import com.bobeat.backend.domain.store.entity.SeatOption;
 import com.bobeat.backend.domain.store.entity.Store;
 import com.bobeat.backend.domain.store.entity.StoreImage;
-import com.bobeat.backend.domain.store.exception.NotFoundRestaurantException;
 import com.bobeat.backend.domain.store.repository.MenuRepository;
 import com.bobeat.backend.domain.store.repository.SeatOptionRepository;
 import com.bobeat.backend.domain.store.repository.StoreImageRepository;
 import com.bobeat.backend.domain.store.repository.StoreRepository;
+import com.bobeat.backend.global.exception.CustomException;
 import com.bobeat.backend.global.response.CursorPageResponse;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -33,7 +34,7 @@ public class StoreService {
 
         List<StoreSearchResponse> storeSearchResponses = storeCursorPageResponse.getData().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         return new CursorPageResponse<>(
                 storeSearchResponses,
@@ -43,7 +44,8 @@ public class StoreService {
     }
 
     public StoreDetailResponse findById(Long restaurantId) {
-        Store store = storeRepository.findById(restaurantId).orElseThrow(NotFoundRestaurantException::new);
+        Store store = storeRepository.findById(restaurantId)
+                .orElseThrow(() -> new CustomException(NOT_FOUND_RESTAURANT));
         List<StoreImage> storeImages = storeImageRepository.findByStore(store);
         List<Menu> menus = menuRepository.findByStore(store);
         List<SeatOption> seatOptions = seatOptionRepository.findByStore(store);
